bynkc/tests/fixtures/negative/106_instant_plus_int/input.bynk
commons c {
  fn bad(t: Instant) -> Instant {
    t + 1
  }
}
